--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 # they have to start with next_public_ 
 NODE_ENV = 'development'
-NEXT_PUBLIC_API_URL = 'http://localhost:8000'
+NEXT_PUBLIC_API_URL = 'https://bird-app-snowy.vercel.app'
