--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 # they have to start with next_public_ 
 NODE_ENV = 'production'
 NEXT_PUBLIC_API_URL = 'https://bird-app-snowy.vercel.app'
-CI = fasle
+CI = false
