--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,3 +1,18 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": "next/core-web-vitals",
+    "overrides": [
+        {
+            "files": [
+                "styles/global.css"
+            ],
+            "rules": {
+                "no-use-before-define": [
+                    "off"
+                ],
+                "max-lines-per-function": [
+                    "off"
+                ]
+            }
+        }
+    ]
 }
