--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,10 @@
     "next-http-proxy-middleware": "^1.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
