--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,8 @@
-# they have to start with next_public_ 
-NODE_ENV = 'production'
-NEXT_PUBLIC_API_URL = 'https://bird-app-snowy.vercel.app'
+# they have to start with next_public_ https://bird-app-snowy.vercel.app
+NODE_ENV='production'
+NEXT_PUBLIC_API_URL='https://birdapp-inky.vercel.app/'
+DJANGO_API_URL='https://bird-app-snowy.vercel.app'
+
 CI = false
+
+
