--- a/frontend/.env
+++ b/frontend/.env
@@ -5,7 +5,7 @@
 
 NODE_ENV='production'
 NEXT_PUBLIC_API_URL='https://birdapp-inky.vercel.app'
-DJANGO_API_URL='https://bird-app-snowy.vercel.app'
+NEXT_PUBLIC_DJANGO_API_URL='https://bird-app-snowy.vercel.app'
 
 CI = false
 
