--- a/frontend/.env
+++ b/frontend/.env
@@ -1,11 +1,11 @@
 # they have to start with next_public_ https://bird-app-snowy.vercel.app
-NODE_ENV='development'
-NEXT_PUBLIC_API_URL='http://localhost:3000'
-NEXT_PUBLIC_DJANGO_API_URL='http://localhost:8000'
+# NODE_ENV='development'
+# NEXT_PUBLIC_API_URL='http://localhost:3000'
+# NEXT_PUBLIC_DJANGO_API_URL='http://localhost:8000'
 
-# NODE_ENV='production'
-# NEXT_PUBLIC_API_URL='https://birdapp-inky.vercel.app'
-# NEXT_PUBLIC_DJANGO_API_URL='https://bird-app-snowy.vercel.app'
+NODE_ENV='production'
+NEXT_PUBLIC_API_URL='https://birdapp-inky.vercel.app'
+NEXT_PUBLIC_DJANGO_API_URL='https://bird-app-snowy.vercel.app'
 
 CI = false
 
